--- a/judo_profiles/main/templates/profile.html
+++ b/judo_profiles/main/templates/profile.html
@@ -7,7 +7,8 @@
     <body>
         <div id="general_container">
             <p id="title">Kämpferprofil von</p>
-            <p>{{ fighter.name }}, {{ fighter.last_name }} - Jahrgang: {{ fighter.year }}, Gewicht: {{ fighter.weight }}kg</p>
+            <p>{{ fighter.last_name }}, {{ fighter.name }} - Jahrgang: {{ fighter.year }}, Gewicht: {{ fighter.weight }}kg</p>
+            <p>geändert: {{ fighter.updated_on }}</p>
         </div>
         <table id="main">
             <tr>
