--- a/judo_profiles/main/templates/new.html
+++ b/judo_profiles/main/templates/new.html
@@ -42,7 +42,7 @@
                                 </div>
                                 <br>
                                 <button id="delete" onclick="delClick()">Löschen</button>
-                                <div id="image_container">
+                                <div id="image_container" style="background-image: url('{% static "image/image.png" %}');">
                                     <img src="{% static "image/image.png" %}" id="image">
                                     <div class="r move position 1" id="pR1">1</div>
                                     <div class="r move position 2" id="pR2">2</div>
