--- a/judo_profiles/main/templates/profile.html
+++ b/judo_profiles/main/templates/profile.html
@@ -57,8 +57,8 @@
                                 <div class="l position option 4" id="oL4">4</div>
                             </div>
                             <br>
-                            <div id="image_container">
-                                <img src="{% static "image/image.png" %}" id="image">
+                            <div id="image_container" style="background-image: url('{% static "image/image.png" %}'); background-repeat: no-repeat;">
+                                <img src="{% static "image/image.png" %}" id="image" style="visibility: hidden;">
                                 <div class="r move position 1" id="pR1">1</div>
                                 <div class="r move position 2" id="pR2">2</div>
                                 <div class="r move position 3" id="pR3">3</div>
