--- a/judo_profiles/main/templates/new.html
+++ b/judo_profiles/main/templates/new.html
@@ -10,6 +10,16 @@
                     <option value="{{ t.id }}">{{ t.name }}</option>
                 {% endfor %}
             </div>
+            <div id="hidden_st">
+                {% for t in stechniques %}
+                    <option value="{{ t.id }}">{{ t.name }}</option>
+                {% endfor %}
+            </div>
+            <div id="hidden_gt">
+                {% for t in gtechniques %}
+                    <option value="{{ t.id }}">{{ t.name }}</option>
+                {% endfor %}
+            </div>
         </div>
         <form method="post">
             {% csrf_token %}
@@ -104,7 +114,7 @@
                     <td>
                         <table id="special_rank">
                             <caption>Spezialtechniken</caption>
-                            <button>+</button>
+                            <button onclick="add_rank_item('special')">+</button>
                             <tr>
                                 <td id="special1" class="special"></td>
                             </tr>
@@ -122,7 +132,7 @@
                     <td>
                         <table id="ground_rank">
                             <caption>Bodentechniken</caption>
-                            <button>+</button>
+                            <button onclick="add_rank_item('ground')">+</button>
                             <tr>
                                 <td id="ground1" class="ground"></td>
                             </tr>
@@ -142,7 +152,7 @@
                     <td>
                         <table id="combination_rank">
                             <caption>Kombinationen</caption>
-                            <button>+</button>
+                            <button onclick="add_rank_item('combination')">+</button>
                             <tr>
                                 <td id="combination1" class="combination"></td>
                             </tr>
@@ -165,9 +175,12 @@
     <script>
         const CSRF_TOKEN = document.querySelector("[name=csrfmiddlewaretoken]").value
         const techniques = document.getElementById("hidden_t").innerHTML
+        const stechniques = document.getElementById("hidden_st").innerHTML
+        const gtechniques = document.getElementById("hidden_gt").innerHTML
     </script> 
     <script src="{% static "script/positions.js" %}"></script>
     <script src="{% static "script/change_positions.js" %}"></script>
     <script src="{% static "script/own_techniques.js" %}"></script>
+    <script src="{% static "script/ranks.js" %}"></script>
     <script src="{% static "script/post.js" %}"></script>
 </html>
