finish basic functionality (add, edit, view)

--- a/judo_profiles/main/static/style/main.css
+++ b/judo_profiles/main/static/style/main.css
@@ -124,3 +124,10 @@ label {
 .number {
     display: inline;
 }
+#ranks {
+    width: 100%;
+}
+.rank_item {
+    text-align: center;
+    vertical-align: middle;
+}
