--- a/judo_profiles/main/templates/index.html
+++ b/judo_profiles/main/templates/index.html
@@ -1,6 +1,6 @@
 <html>
     {% if "main.add_fighter" in perms %}
-        <button onclick="location.href = '/new'">Neu</button>
+        <a href="/new">Neu</a>
         <br>
     {% endif %}
     {% load guardian_tags %}
